# Shado-OpenGL

./: .gitignore  README.md
Learning OpenGL/: CMakeLists.txt  Learning OpenGL.vcxproj  Learning OpenGL.vcxproj.filters
Learning OpenGL/Debug/: Learning OpenGL.exe.recipe  Learning OpenGL.idb  Learning OpenGL.vcxproj.FileListAbsolute.txt  vc142.idb
Learning OpenGL/Debug/Learning OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Learning OpenGL.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Learning OpenGL/Release/: Learning OpenGL.exe.recipe
Learning OpenGL/Release/Learning OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Learning OpenGL.lastbuildstate  Learning OpenGL.write.1u.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Learning OpenGL/includes/core/: Application.h  Buffer.h  Camera.h  Debug.h  Renderer2D.h  Shader.h  Texture2D.h  VertexArray.h
Learning OpenGL/includes/core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  input.h
Learning OpenGL/includes/core/util/: Util.h
Learning OpenGL/includes/ressources/: TextureShader.glsl
Learning OpenGL/src/: Shado.h  Testing.cpp
Learning OpenGL/src/collections/: ArrayList.h  Deque.h  IList.h  IQueue.h  IThreadsafe.h  LinkedList.h
Learning OpenGL/src/core/: Application.cpp  Buffer.h  Debug.cpp  Debug.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Texture2D.cpp  Texture2D.h  VertexArray.cpp  Window.cpp  Window.h
Learning OpenGL/src/core/Events/: input.cpp
Learning OpenGL/src/core/cameras/: Camera.h  OrthoCamera.cpp
Learning OpenGL/src/core/experimantal/: Renderer2D.cpp  Renderer2D.h
Learning OpenGL/src/core/ressources/: FlatColorShader.glsl  TextureShader.glsl
Learning OpenGL/src/core/util/: Object3D.cpp  Object3D.h  ParticuleSystem.cpp  Random.cpp  Util.cpp  Util.h
Release/: Learning OpenGL.iobj  Learning OpenGL.ipdb
